--- a/css/style.css
+++ b/css/style.css
@@ -1195,6 +1195,129 @@ main > p > a {
 
 /* -------------------------------- 
 
+New Portfolio Gallery
+
+-------------------------------- */
+.gallery {
+  display: table;
+  max-width: 100%;
+  margin: auto; }
+  @media only screen and (min-width: 640px) {
+    .gallery {
+      max-width: 93.5%; } }
+  .gallery .galleryItem {
+    display: inline-block;
+    width: 50%; }
+    @media only screen and (min-width: 640px) {
+      .gallery .galleryItem {
+        width: 33.33%; } }
+    .gallery .galleryItem figure {
+      display: block;
+      position: relative;
+      overflow: hidden; }
+      .gallery .galleryItem figure img {
+        -webkit-filter: grayscale(40%);
+        filter: grayscale(40%);
+        position: relative;
+        width: 100%;
+        margin: 0;
+        -webkit-transition: all 1s ease 0s;
+        -moz-transition: all 1s ease 0s;
+        -o-transition: all 1s ease 0s;
+        transition: all 1s ease 0s; }
+        @media only screen and (min-width: 640px) {
+          .gallery .galleryItem figure img {
+            -webkit-filter: none;
+            filter: none;
+            -webkit-transition: all 1s ease 0s;
+            -moz-transition: all 1s ease 0s;
+            -o-transition: all 1s ease 0s;
+            transition: all 1s ease 0s;
+            width: 70%;
+            margin: calc(30% / 2); } }
+      .gallery .galleryItem figure figcaption {
+        color: black;
+        text-shadow: -2px 2px 3px white;
+        opacity: 0;
+        -webkit-transition: all 1s ease 0s;
+        -moz-transition: all 1s ease 0s;
+        -o-transition: all 1s ease 0s;
+        transition: all 1s ease 0s; }
+        @media only screen and (min-width: 640px) {
+          .gallery .galleryItem figure figcaption {
+            opacity: 1;
+            display: block;
+            text-shadow: none;
+            font-weight: 100; } }
+    .gallery .galleryItem figure:hover img {
+      -webkit-filter: grayscale(0%);
+      filter: grayscale(0%);
+      -webkit-transform: scale(1.4235);
+      -moz-transform: scale(1.4235);
+      -o-transform: scale(1.4235);
+      -ms-transform: scale(1.4235);
+      transform: scale(1.4235);
+      box-shadow: inset 0 0 10px #000000; }
+      @media only screen and (min-width: 640px) {
+        .gallery .galleryItem figure:hover img {
+          -webkit-filter: none;
+          filter: none;
+          -webkit-transform: scale(1.4235);
+          -moz-transform: scale(1.4235);
+          -o-transform: scale(1.4235);
+          -ms-transform: scale(1.4235);
+          transform: scale(1.4235); } }
+    .gallery .galleryItem figure:hover figcaption {
+      opacity: 1;
+      font-weight: 800;
+      text-shadow: -2px 2px 3px white;
+      font-size: 20px; }
+      @media only screen and (min-width: 640px) {
+        .gallery .galleryItem figure:hover figcaption {
+          font-weight: 100;
+          text-shadow: none;
+          font-size: 15px; } }
+      @media only screen and (min-width: 768px) {
+        .gallery .galleryItem figure:hover figcaption {
+          font-size: 18px; } }
+    .gallery .galleryItem .captionTop, .gallery .galleryItem .captionBottom {
+      text-align: center;
+      width: 100%;
+      text-transform: uppercase;
+      z-index: 2;
+      font-size: 15px;
+      position: absolute;
+      padding: 6.5% 0; }
+      @media only screen and (min-width: 640px) {
+        .gallery .galleryItem .captionTop, .gallery .galleryItem .captionBottom {
+          padding: 4% 0;
+          font-size: 15px; } }
+      @media only screen and (min-width: 768px) {
+        .gallery .galleryItem .captionTop, .gallery .galleryItem .captionBottom {
+          font-size: 18px;
+          padding: 6.5% 0; } }
+    .gallery .galleryItem .captionTop {
+      top: 55px; }
+      @media only screen and (min-width: 640px) {
+        .gallery .galleryItem .captionTop {
+          top: 0; } }
+    .gallery .galleryItem .captionBottom {
+      bottom: 55px; }
+      @media only screen and (min-width: 640px) {
+        .gallery .galleryItem .captionBottom {
+          bottom: 0; } }
+  @media only screen and (min-width: 640px) {
+    .gallery .galleryItem:nth-child(odd) {
+      background: black; }
+      .gallery .galleryItem:nth-child(odd) figcaption {
+        color: #FFF5F5; }
+    .gallery .galleryItem:nth-child(even) {
+      background: #FFF5F5; }
+      .gallery .galleryItem:nth-child(even) figcaption {
+        color: black; } }
+
+/* -------------------------------- 
+
 Footer
 
 -------------------------------- */
