--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1413,6 +1413,27 @@ Portfolio Gallery
             position: relative;
             overflow: hidden;
             
+            .galleryItem-overlay {
+                height: 100%;
+                position: absolute;
+                width: 100%;
+                background: $color-green;
+                z-index: 2;
+                -webkit-transition: all 0.3s ease-out;
+                -moz-transition: all 0.3s ease-out;
+                -o-transition: all 0.3s ease-out;
+                -ms-transition: all 0.3s ease-out;
+                transition: all 0.3s ease-out;
+                -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                filter: alpha(opacity=0);
+                opacity: 0;
+                
+                @include MQ(SM) {
+                    display: none;
+                }
+            }
+            
+            
             img {
                 -webkit-filter: grayscale(40%);
                 filter: grayscale(40%);
@@ -1433,11 +1454,11 @@ Portfolio Gallery
                     transition: all 1s ease 0s;
                     width: 70%;
                     margin: calc(30% / 2);
+                }
             }
-        }
             figcaption {
                 color: black;
-                text-shadow: -2px 2px 3px white;
+                //text-shadow: -2px 2px 3px white;
                 opacity: 0;
                 -webkit-transition: all 1s ease 0s;
                 -moz-transition: all 1s ease 0s;
@@ -1450,18 +1471,19 @@ Portfolio Gallery
                     text-shadow: none;
                     font-weight: 100;
                 }
-                
-                @include MQ(L) {
-
-                }
             }   
         }
         figure:hover {
             
+            .galleryItem-overlay {
+                -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=80)";
+                filter: alpha(opacity=80);
+                opacity: .5;
+            }
+            
             img {
-                -webkit-filter: grayscale(0%);
-                filter: grayscale(0%);
-                
+                //-webkit-filter: grayscale(0%);
+                //filter: grayscale(0%);
                 -webkit-transform: scale(1.4235);
                 -moz-transform: scale(1.4235);
                 -o-transform: scale(1.4235);
@@ -1473,8 +1495,6 @@ Portfolio Gallery
                 @include MQ(SM) {
                     -webkit-filter: none;
                     filter: none;
-                    
-                    
                     -webkit-transform: scale(1.4235);
                     -moz-transform: scale(1.4235);
                     -o-transform: scale(1.4235);
@@ -1484,8 +1504,8 @@ Portfolio Gallery
             }
                 figcaption {
                     opacity: 1;
-                    font-weight: 800;
-                    text-shadow: -2px 2px 3px white;
+                    font-weight: 500;
+                    //text-shadow: -2px 2px 3px white;
                     font-size: 20px;
                     
                     @include MQ(SM) {
